# kg-house-price-prediction

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
data/: load_data.py
data/processed/: desc.txt  test_cleaned.csv  train_cleaned.csv
deployment/: api.py
features/: build_features.py
notebooks/: 00_eda.ipynb  00_load_data.ipynb  00_load_data.py  01_eda.ipynb
pkg_house_prices/data/: data_loader.py
pkg_house_prices/features/: missing_ratio_dropper.py  preprocessor.py
pkg_house_prices/models/: evaluator.py  final_generator.py  optimize_xgb.py  predict.py  trainer.py
pkg_house_prices/utils/: config.py  helpers.py  logger.py  project_root.py
src/data/: preprocess.py
src/pkg_house_prices/data/: data_cleaner.py  data_loader.py  load_data.py
src/pkg_house_prices/data/outputs/: final_predictions.csv
src/pkg_house_prices/features/: build_features.py  preprocessor.py
src/pkg_house_prices/models/: 01_train_models.py  02_evaluate_models.py  03_diagnostics.py  evaluate_models.py  predict.py  task_01_train_models.py  task_02_evaluate_models.py  task_03_optimize_xgb_hp.py  task_04_generate_final_results.py  train.py  train_LR.py  train_models.py
src/pkg_house_prices/utils/: config.py  helpers.py  import_yaml.py  project_root.py  read_config.py
tests/: conftest.py  temp.py
tests/sample_data/: train_sample.csv
tests/unit/: test_feature_engineering.py  test_model_training.py  test_preprocessing.py
(+6 files in other folders)
